syntax = "proto3";

option java_multiple_files = true;
option java_package = "it.unibo.ds.grpc.greeting";
option java_outer_classname = "HelloWorldProto";

package greeting;

service Greeter {

  rpc SayHello(HelloRequest) returns (HelloReply) { }

}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
